Adds gradle files

--- a/.gitignore
+++ b/.gitignore
@@ -130,9 +130,8 @@ $RECYCLE.BIN/
 *.lnk
 .idea/
 app/build
-build.gradle
-gradle.properties
+
 gradle/
 gradlew
 gradlew.bat
-settings.gradle
+/gradle.properties
