--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,17 +23,17 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    androidTestCompile 'com.android.support.test:runner:0.5'
-    androidTestCompile 'com.android.support:support-annotations:24.2.1'
 
-    testCompile 'junit:junit:4.12'
-
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
 //    compile 'com.android.support:support-v13:24.2.0'
 //    compile 'com.android.support:palette-v7:24.2.0'
 //    compile 'com.android.support:recyclerview-v7:24.2.0'
 //    compile 'com.android.support:preference-v7:24.2.0'
 //    compile 'com.android.support:preference-v14:24.2.0'
 //    compile 'com.android.support:percent:24.2.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:support-v4:24.2.1'
+    testCompile 'junit:junit:4.12'
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support:support-annotations:24.2.1'
 }
