--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest package="edu.depaul.jmorton.boschhack.boschhackathon"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+
+    <uses-feature
+        android:name="android.hardware.bluetooth_le"
+        android:required="true"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,6 +23,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.PhoneMainActivity">
+        </activity>
+        <activity android:name=".activities.BaseActivity">
         </activity>
     </application>
 
