Adds layout for XDK fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,14 @@
         <activity android:name=".activities.PhoneMainActivity"/>
         <activity android:name=".activities.BaseActivity">
         </activity>
+
+        <!-- Service to handle BLE Advertising - Using a service allows advertising to continue
+             when the app is no longer on screen in a reliable manner.  -->
+        <service
+            android:name=".services.AdvertiserService"
+            android:enabled="true"
+            android:exported="false">
+        </service>
     </application>
 
 </manifest>
